<resources>
  <string name="retry">Retry</string>
  <string name="repository_url_text">Source code available at https://0xacab.org/leap/bitmask_android</string>
  <string name="leap_tracker">Issue tracker available at https://0xacab.org/leap/bitmask_android/issues</string>
  <string name="translation_project_text">Translations welcome and appreciated. See our Transifex project at https://www.transifex.com/projects/p/bitmask-android/</string>
  <string name="switch_provider_menu_option">Switch provider</string>
  <string name="info">info</string>
  <string name="show_connection_details">Show connection details</string>
  <string name="routes_info">Routes: %s</string>
  <string name="routes_info6">IPv6 routes: %s</string>
  <string name="error_empty_username">The username must not be empty.</string>
  <string name="cert_from_keystore">Got certificate \'%s\' from keystore</string>
  <string name="provider_label">Provider:</string>
  <string name="provider_label_none">No provider configured</string>
  <string name="status_unknown">Status unknown.</string>
  <string name="eip_service_label">Encrypted Internet Access</string>
  <string name="configuration_wizard_title">Select a service provider</string>
  <string name="add_provider">Add new Provider</string>
  <string name="introduce_new_provider">Add a new service provider</string>
  <string name="save">Save</string>
  <string name="new_provider_uri">Domain name</string>
  <string name="valid_url_entered">The URL is valid</string>
  <string name="not_valid_url_entered">Malformed URL</string>
  <string name="provider_details_title">Provider details</string>
  <string name="use_anonymously_button">Use anonymously</string>
  <string name="username_hint">username</string>
  <string name="username_ask">Please enter your username</string>
  <string name="password_ask">Please enter your password</string>
  <string name="password_hint">password</string>
  <string name="password_match">Passwords match</string>
  <string name="password_mismatch">Passwords do not match</string>
  <string name="user_message">User message</string>
  <string name="about_fragment_title">About</string>
  <string name="exclude_apps_fragment_title">Exclude apps from VPN</string>
  <string name="error_srp_math_error_user_message">Try again: Server math error</string>
  <string name="error_bad_user_password_user_message">Incorrect username or password</string>
  <string name="error_not_valid_password_user_message">It must be at least 8 characters long</string>
  <string name="error_client_http_user_message">Try again: Client HTTP error</string>
  <string name="error_io_exception_user_message">Try again: I/O error</string>
  <string name="error_json_exception_user_message">Try again: Bad response from the server</string>
  <string name="error_no_such_algorithm_exception_user_message">Encryption algorithm not found. Please upgrade Android!</string>
  <string name="signup_or_login_button">Sign Up/Log In</string>
  <string name="login_button">Log In</string>
  <string name="login_to_profile">Log in to profile</string>
  <string name="logout_button">Log Out</string>
  <string name="signup_button">Sign Up</string>
  <string name="create_profile">Create profile</string>
  <string name="setup_provider">Set up provider</string>
  <string name="setup_error_title">Configuration Error</string>
  <string name="setup_error_configure_button">Configure</string>
  <string name="setup_error_close_button">Exit</string>
  <string name="setup_error_text">There was an error configuring %s with your chosen provider.\n\nYou may choose to reconfigure, or exit and configure a provider upon next launch.</string>
  <string name="server_unreachable_message">The server is unreachable, please try again.</string>
  <string name="error.security.pinnedcertificate">Security error, upgrade the app or choose another provider.</string>
  <string name="malformed_url">It doesn\'t seem to be a %s provider.</string>
  <string name="certificate_error">This is not a trusted %s provider.</string>
  <string name="service_is_down_error">The service is down.</string>
  <string name="configuring_provider">Configuring provider</string>
  <string name="incorrectly_downloaded_certificate_message">Your anonymous certificate was not downloaded</string>
  <string name="downloading_certificate_message">Downloading VPN certificate</string>
  <string name="updating_certificate_message">Updating VPN certificate</string>
  <string name="login.riseup.warning">Riseup users will need to create a separate account to use the VPN service</string>
  <string name="succesful_authentication_message">Authenticated</string>
  <string name="authentication_failed_message">Authentication failed</string>
  <string name="registration_failed_message">Registration failed</string>
  <string name="eip_status_start_pending">Initiating connection</string>
  <string name="eip_cancel_connect_title">Cancel connection?</string>
  <string name="eip_cancel_connect_text">There is a connection attempt in progress.  Do you wish to cancel it?</string>
  <string name="eip.warning.browser_inconsistency">Turn off VPN connection? When the VPN is off, you may leak personal information to your Internet provider or local network.</string>
  <string name="eip_state_not_connected">Not running! Insecure connection!</string>
  <string name="eip_state_connected">Connection Secure</string>
  <string name="provider_problem">It seems there is a problem with the provider.</string>
  <string name="try_another_provider">Please try another provider, or contact yours.</string>
  <string name="default_username">Anonymous</string>
  <string name="logging_in">Logging in</string>
  <string name="signing_up">Signing up</string>
  <string name="vpn.button.turn.on">Turn on</string>
  <string name="vpn.button.turn.off">Turn off</string>
  <string name="vpn_button_turn_off_blocking">Stop blocking</string>
  <string name="vpn_securely_routed">Your traffic is securely routed through the</string>
  <string name="vpn_securely_routed_no_internet">No internet connection detected, when it comes back we\'ll route your traffic securely through:</string>
  <string name="log_fragment_title">Log</string>
  <string name="vpn_fragment_title">VPN</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_example">Example action</string>
  <string name="action_settings">Settings</string>
  <string name="void_vpn_establish">%s blocks all outgoing internet traffic.</string>
  <string name="void_vpn_error_establish">Failed to establish blocking VPN.</string>
  <string name="void_vpn_stopped">Stopped blocking all outgoing internet traffic.</string>
  <string name="void_vpn_title">Blocking traffic</string>
  <string name="update_provider_details">Update provider details</string>
  <string name="update_certificate">Update certificate</string>
  <string name="warning_eip_json_corrupted">Updating provider configuration failed.</string>
  <string name="eip_json_corrupted_user_message">Updating provider configuration failed. Please log in to try again.</string>
  <string name="warning_client_parsing_error_gateways">The provider gateways could not be recognized. They may be configured incorrectly.</string>
  <string name="warning_corrupted_provider_details">Stored provider details are corrupted. You can either update %s (recommended) or update the provider details using a commercial CA certificate.</string>
  <string name="warning_corrupted_provider_cert">Stored provider certificate is invalid. You can either update %s (recommended) or update the provider certificate using a commercial CA certificate.</string>
  <string name="warning_expired_provider_cert">Stored provider certificate is expired. You can either update %s (recommended) or update the provider certificate using a commercial CA certificate.</string>
  <string name="downloading_vpn_certificate_failed">Downloading the VPN certificate failed. Try again or choose another provider.</string>
  <string name="vpn_certificate_is_invalid">VPN certificate is invalid. Try to download a new one.</string>
  <string name="vpn_certificate_user_message">The VPN certificate is invalid. Please log in to download a new one.</string>
  <string name="save_battery">Save battery</string>
  <string name="subtitle_save_battery">Disabled while VPN Hotspot is on</string>
  <string name="save_battery_message">Background data connections will hibernate when your phone is inactive.</string>
  <string name="always_on_vpn">Always-on VPN</string>
  <string name="subtitle_always_on_vpn">Open Android System Settings</string>
  <string name="tethering">VPN Hotspot</string>
  <string name="ipv6Firewall">Block IPv6</string>
  <string name="require_root">Requires root permissions</string>
  <string name="show_experimental">Show experimental features</string>
  <string name="hide_experimental">Hide experimental features</string>
  <string name="tethering_enabled_message">Please make sure to enable tethering in the <![CDATA[<b>system settings</b>]]> first.</string>
  <string name="tethering_message">Share your VPN with other devices via:</string>
  <string name="tethering_wifi">Wi-Fi hotspot</string>
  <string name="tethering_usb">USB tethering</string>
  <string name="tethering_bluetooth">Bluetooth tethering</string>
  <string name="do_not_show_again">Do not show again</string>
  <string name="always_on_vpn_user_message">To enable always-on VPN in Android VPN Settings click on the configure icon [img src] and turn the switch on.</string>
  <string name="always_on_blocking_vpn_user_message">To protect your privacy optimally, you should also activate the option \"Block connections without VPN\".</string>
  <string name="donate_title">Donate</string>
  <string name="donate_default_message">Please donate today if you value secure communication that is easy for both the end-user and the service provider.</string>
  <string name="donate_message">LEAP depends on donations and grants. Please donate today if you value secure communication that is easy for both the end-user and the service provider.</string>
  <string name="donate_button_remind_later">Remind me later</string>
  <string name="donate_button_donate">Donate</string>
  <string name="obfuscated_connection">Using an obfuscated connection.</string>
  <string name="obfuscated_connection_try">Trying an obfuscated connection.</string>
  <string name="nav_drawer_obfuscated_connection">Using Bridges</string>
  <string name="nav_drawer_subtitle_obfuscated_connection">Circumvent VPN filtering</string>
  <string name="warning_exclude_apps_message">Be careful of excluding apps from VPN. This will reveal your identity and compromise your security.</string>
  <plurals name="subtitle_exclude_apps">
    <item quantity="one">%d unprotected app</item>
    <item quantity="other">%d unprotected apps</item>
  </plurals>
  <string name="warning_no_more_gateways_use_pt">%s could not connect. It might be that VPN connections get blocked. Do you want to try to connect using obfuscated connections?</string>
  <string name="warning_no_more_gateways_no_pt">%s could not connect. Do you want to retry?</string>
  <string name="warning_no_more_gateways_use_ovpn">%s could not connect using obfuscated VPN connections. Do you want to try to connect using a standard VPN?</string>
  <string name="warning_option_try_pt">Try obfuscated connection</string>
  <string name="warning_option_try_ovpn">Try standard connection</string>
  <string name="vpn_error_establish">Android failed to establish the VPN service.</string>
  <string name="root_permission_error">%s cannot execute features like VPN Hotspot or IPv6 firewall without root permissions.</string>
  <string name="qs_enable_vpn">Start %s</string>
  <string name="version_update_found">Tap here to start the download.</string>
</resources>