<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    tools:context=".base.fragments.NavigationDrawerFragment"
    android:clickable="true"
    android:focusable="true"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/background_drawer" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/foreground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/drawer_logo" />
        </FrameLayout>

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/account"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/switch_provider"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:text="@string/switch_provider_menu_option"
            app:icon="@drawable/ic_switch_provider_36"
            android:visibility="gone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black800_high_transparent"
            android:minHeight="20dp"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <se.leap.bitmaskclient.base.views.IconSwitchEntry
            android:id="@+id/battery_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_battery_36"
            app:subtitle="@string/subtitle_save_battery"
            app:text="@string/save_battery"
            tools:visibility="gone" />

        <se.leap.bitmaskclient.base.views.IconSwitchEntry
            android:id="@+id/bridges_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_bridge_36"
            app:subtitle="@string/nav_drawer_subtitle_obfuscated_connection"
            app:text="@string/nav_drawer_obfuscated_connection"
            tools:visibility="gone" />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/always_on_vpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_always_on_36"
            app:subtitle="@string/subtitle_always_on_vpn"
            app:text="@string/always_on_vpn"
            tools:visibility="gone" />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/exclude_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_shield_remove_grey600_36dp"
            app:text="@string/exclude_apps_fragment_title"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/show_experimental_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black800_high_transparent"
            android:gravity="center"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/show_experimental"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone"
            tools:visibility="gone" />

        <se.leap.bitmaskclient.base.views.IconSwitchEntry
            android:id="@+id/enableIPv6Firewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_cancel"
            app:subtitle="@string/require_root"
            app:text="@string/ipv6Firewall"
            tools:visibility="gone" />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/tethering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_access_point_36"
            app:subtitle="@string/require_root"
            app:text="@string/tethering"
            tools:visibility="gone" />

        <View
            android:id="@+id/experimental_features_footer"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/black800_high_transparent"
            android:visibility="gone"
            tools:visibility="gone" />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_donate_36"
            app:text="@string/donate_title"
            tools:visibility="gone" />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:icon="@drawable/ic_log_36"
            app:text="@string/log_fragment_title"
            tools:visibility="visible" />

        <se.leap.bitmaskclient.base.views.IconTextEntry
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:icon="@drawable/ic_about_36"
            app:text="@string/about_fragment_title"
            tools:visibility="visible" />


    </LinearLayout>

</ScrollView>
